# BUT-R6.01-TP3

./: Prise en main.ipynb  TP3.ipynb  requirements.txt
generation/: README.md  embed_query.py  embedder.py  final.py  get_tracks.py  models.py  pyproject.toml  tracks.json
generation/final_output/: metadata.csv  queries.jsonl  query.jsonl  vectors_001.jsonl  vectors_002.jsonl  vectors_003.jsonl  vectors_004.jsonl  vectors_005.jsonl  vectors_006.jsonl  vectors_007.jsonl  vectors_008.jsonl  vectors_009.jsonl  vectors_010.jsonl  vectors_011.jsonl  vectors_012.jsonl  vectors_013.jsonl  vectors_014.jsonl  vectors_015.jsonl  vectors_016.jsonl  vectors_017.jsonl  vectors_018.jsonl
